--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.4.0</version>
         </dependency>
+
+        <!-- 配置文件加密 -->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>1.18</version>
+        </dependency>
     </dependencies>
 
     <build>
