--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,9 +1,20 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/testdb?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-    username: ENC(WeVAlCoH2QAMHRmcd8Sw6g==)
-    password: ENC(pcRBtYWh9Net/0eIads16NnEMfet2wWT)
+    url: jdbc:mysql://localhost:3306/study?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    username: zsl
+    password: 0930zsl!
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: 192.168.1.103
+    port: 6379
+    password: 0930zsl
+    database: 0
+    lettuce:
+      pool:
+        max-active: 8
+        max-idle: 8 #最大空闲连接
+        min-idle: 1 #最小空闲连接
+        max-wait: 100ms #连接等待时间
 
 logging:
   config: classpath:log4j2-dev.xml
