--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -20,6 +20,8 @@ spring:
     port: 5672
     username: jojo
     password: 0930zsl
+    # 设置发布确认
+    publisher-confirm-type: correlated
 
 logging:
   config: classpath:log4j2-spring.xml
