--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -21,7 +21,9 @@ spring:
     username: jojo
     password: 0930zsl
     # 设置发布确认
+    # 若只设置此参数，交换机在接收到消息后就会立即发送确认消息（消息未成功发送到队列的情况，发送方无法得知）
     publisher-confirm-type: correlated
+    publisher-returns: true
 
 logging:
   config: classpath:log4j2-spring.xml
