RabbitMQ : 规范配置类写法

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -24,6 +24,9 @@ spring:
     # 若只设置此参数，交换机在接收到消息后就会立即发送确认消息（消息未成功发送到队列的情况，发送方无法得知）
     publisher-confirm-type: correlated
     publisher-returns: true
+    listener:
+      direct:
+        acknowledge-mode: manual
 
 logging:
   config: classpath:log4j2-spring.xml
